Deploy latest version with all updates and fixes

--- a/.env.example
+++ b/.env.example
@@ -19,5 +19,8 @@ AI_API_ENDPOINT=your_ai_image_generation_api_endpoint_here
 PORT=3001
 NODE_ENV=development
 
+# WalletConnect Configuration
+VITE_WALLETCONNECT_PROJECT_ID=your_walletconnect_project_id_here
+
 # Frontend Configuration
 VITE_API_URL=http://localhost:3001
