--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "trae-project",
+  "name": "four.fun",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "client:dev": "vite",
@@ -14,30 +14,35 @@
   },
   "dependencies": {
     "@google/genai": "^1.22.0",
-    "@solana/spl-token": "^0.4.14",
-    "@solana/wallet-adapter-base": "^0.9.27",
-    "@solana/wallet-adapter-react": "^0.15.39",
-    "@solana/wallet-adapter-react-ui": "^0.9.39",
-    "@solana/wallet-adapter-wallets": "^0.19.37",
-    "@solana/web3.js": "^1.98.4",
+    "@rainbow-me/rainbowkit": "^2.1.7",
     "@supabase/supabase-js": "^2.45.4",
+    "@tanstack/react-query": "^5.59.0",
     "@types/uuid": "^11.0.0",
+    "@wagmi/core": "^2.15.2",
+    "@walletconnect/web3-provider": "^1.8.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
+    "ethers": "^6.13.4",
     "express": "^4.21.2",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.511.0",
     "multer": "^1.4.5-lts.1",
+    "radix-ui": "^1.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.9",
     "react-router-dom": "^7.3.0",
     "sharp": "^0.34.4",
     "sonner": "^1.7.0",
-    "tailwind-merge": "^3.0.2",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "tweetnacl": "^1.0.3",
     "uuid": "^13.0.0",
+    "viem": "^2.21.19",
+    "wagmi": "^2.12.17",
+    "web3": "^4.15.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
