feat:  token UI, dynamic buy URLs, PancakeSwap CTA

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,15 @@ VITE_WALLETCONNECT_PROJECT_ID=your_walletconnect_project_id_here
 
 # Frontend Configuration
 VITE_API_URL=http://localhost:3001
+
+# Four.Fun Token ($四) configuration
+# ERC-20 Contract Address on BSC (Mainnet)
+VITE_QUAD_TOKEN_CA=0x0A43fC31a73013089DF59194872Ecae4cAe14444
+# Public purchase URL templates (dynamic by CA)
+# Examples:
+#   https://four.meme/token/{CA}   -> will replace {CA}
+#   https://four.meme/token        -> will append /<CA>
+#   https://four.meme              -> will build /token/<CA>
+VITE_QUAD_TOKEN_BUY_URL=https://four.meme/token/{CA}
+# Optional: decimals override if contract call isn’t accessible
+# VITE_QUAD_TOKEN_DECIMALS=18
